[gd_scene load_steps=18 format=3 uid="uid://b712pxr3iuo7x"]

[ext_resource type="PackedScene" uid="uid://b0omfelsiothx" path="res://Scenes/Levels/SMBLL/LostLevelsEnding.tscn" id="1_3ouhg"]
[ext_resource type="Texture2D" uid="uid://blvcqkxarexrv" path="res://Assets/Sprites/Players/DiscoNPCs.png" id="2_xj4cw"]
[ext_resource type="Script" uid="uid://bjs5mlc3xrxud" path="res://Scripts/Parts/DiscoLevel.gd" id="3_xj4cw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xj4cw"]
atlas = ExtResource("2_xj4cw")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_twn8w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj4cw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nmko4"]
atlas = ExtResource("2_xj4cw")
region = Rect2(16, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2ma4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmko4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7cilq"]
atlas = ExtResource("2_xj4cw")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_op12h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cilq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fubn5"]
atlas = ExtResource("2_xj4cw")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uuw0f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fubn5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kajc1"]
atlas = ExtResource("2_xj4cw")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tsyh5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kajc1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jw1ti"]
atlas = ExtResource("2_xj4cw")
region = Rect2(80, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pijpk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw1ti")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_s2i72"]
atlas = ExtResource("2_xj4cw")
region = Rect2(96, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_08njn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2i72")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="LostLevelsEnding" instance=ExtResource("1_3ouhg")]
campaign = "SMBANN"

[node name="DayBG" parent="." index="1"]
visible = false

[node name="Sprite2D2" parent="." index="8"]
texture = ExtResource("2_xj4cw")
region_rect = Rect2(128, 0, 16, 32)

[node name="1" parent="Toads" index="0"]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_twn8w")
animation = &"default"
autoplay = ""

[node name="ResourceSetterNew" parent="Toads/1" index="0"]
use_cache = false
force_properties = {
"World": 2
}

[node name="Sprite2D" type="Sprite2D" parent="Toads/1" index="1"]
texture = ExtResource("2_xj4cw")
region_enabled = true
region_rect = Rect2(0, 0, 16, 32)

[node name="2" parent="Toads" index="1"]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_u2ma4")
animation = &"default"
autoplay = ""

[node name="ResourceSetterNew" parent="Toads/2" index="0"]
use_cache = false
force_properties = {
"World": 2
}

[node name="Sprite2D" type="Sprite2D" parent="Toads/2" index="1"]
texture = ExtResource("2_xj4cw")
region_enabled = true
region_rect = Rect2(16, 0, 16, 32)

[node name="3" parent="Toads" index="2"]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_op12h")
animation = &"default"
autoplay = ""

[node name="ResourceSetterNew" parent="Toads/3" index="0"]
use_cache = false
force_properties = {
"World": 3
}

[node name="Sprite2D" type="Sprite2D" parent="Toads/3" index="1"]
texture = ExtResource("2_xj4cw")
region_enabled = true
region_rect = Rect2(32, 0, 16, 32)

[node name="4" parent="Toads" index="3"]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_uuw0f")
animation = &"default"
autoplay = ""

[node name="ResourceSetterNew" parent="Toads/4" index="0"]
use_cache = false
force_properties = {
"World": 4
}

[node name="Sprite2D" type="Sprite2D" parent="Toads/4" index="1"]
texture = ExtResource("2_xj4cw")
region_enabled = true
region_rect = Rect2(48, 0, 16, 32)

[node name="5" parent="Toads" index="4"]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_tsyh5")
animation = &"default"
autoplay = ""

[node name="ResourceSetterNew" parent="Toads/5" index="0"]
use_cache = false
force_properties = {
"World": 5
}

[node name="Sprite2D" type="Sprite2D" parent="Toads/5" index="1"]
texture = ExtResource("2_xj4cw")
region_enabled = true
region_rect = Rect2(64, 0, 16, 32)

[node name="6" parent="Toads" index="5"]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_pijpk")
animation = &"default"
autoplay = ""

[node name="ResourceSetterNew" parent="Toads/6" index="0"]
use_cache = false
force_properties = {
"World": 6
}

[node name="Sprite2D" type="Sprite2D" parent="Toads/6" index="1"]
texture = ExtResource("2_xj4cw")
region_enabled = true
region_rect = Rect2(80, 0, 16, 32)

[node name="7" parent="Toads" index="6"]
self_modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_08njn")
animation = &"default"
autoplay = ""

[node name="ResourceSetterNew" parent="Toads/7" index="0"]
use_cache = false
force_properties = {
"World": 7
}

[node name="Sprite2D" type="Sprite2D" parent="Toads/7" index="1"]
texture = ExtResource("2_xj4cw")
region_enabled = true
region_rect = Rect2(96, 0, 16, 32)

[node name="DiscoLevel" type="Node" parent="." index="13"]
script = ExtResource("3_xj4cw")
combo_meter_rate = 0.0
metadata/_custom_type_script = "uid://bjs5mlc3xrxud"

[connection signal="ready" from="DiscoLevel" to="DiscoLevel" method="write_final_rank"]
[connection signal="ready" from="DiscoLevel" to="DiscoLevel" method="level_finished"]

[editable path="DayBG"]
[editable path="LevelBG"]
